--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     
 </head>
 <body>
-    <h1>Magazine</h1>
-</body>
-</html>
+    <nav>
+        <div class="left-section">
+          <a href="#">LOCAL</a>
+          <a href="#">TRENDING</a>
+        </div>
+        <div class="center-section">
+          <a href="#">STAKES</a>
+        </div>
+
+        <div class="right-section">
+          <button class="news">News</button>
+        </div>
+
+      </nav>
+    </body>
+  </html>
