--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="left-section">
-          <a href="#">LOCAL</a>
+          <a href="#" class="local">LOCAL</a>
           <a href="#">TRENDING</a>
         </div>
         <div class="center-section">
