Adjust the centre div section of the nav

--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,63 @@
           <button class="news">News</button>
         </div>
 
+
       </nav>
+              <!-- Hero-top section -->
+      <div class="hero-top">
+        <div class="trending-container">
+            <h1 class="trending">TRENDING</h1>
+        </div>
+        <div class="text-and-button">
+            <p class="left-text">Stay informed, inspired, and entertained with our magazine's diverse and engaging content that caters to your interests and curiosity.</p>
+            <button class="see-more-button">See More</button>
+        </div>
+      </div>
+
+      <div class="banner-image">
+        <div class="hero-div">
+            <p class="hero-caption">SPOTLIGHT ON BLACK <span class="micheal">INFLUENCER</span> MICHEAL AGBOR</p>
+        </div>
+      </div>
+
+      <div class="button-div">
+        <button class="economy">Economy</button>
+        <button class="economy">Business</button>
+        <button class="economy">Entertainment</button>
+        <button class="economy">Politics</button>
+        <button class="economy">Sports</button>
+        <button class="economy">Lifestyle</button>
+      </div>
+
+      <div class="content-section">
+        <div class="left-section-div">
+            <img class="spotlight-woman" src="./Assets/images/afro-woman.jpg" alt="black power woman">
+            <h1 class="story-caption">Meet Black Woman Changing the Narrative & Empowering Women in the US</h1>
+            <p class="full-article">
+                <span class="letter-a">A</span>gbor Micheal Manka is a name you should know. She is a black woman who is changing the narrative and empowering women in the US. Her journey is one of resilience, perseverance, and determination. In this article, we will take a closer look at her life and her work. <br/> <br/>
+
+                Agbor was born and raised in Cameroon, West Africa. She grew up in a small village where women were not encouraged to pursue education or careers. Despite the odds stacked against her, Agbor was determined to succeed. She excelled in school and earned a scholarship to attend college in the United States.<br/> <br/>
+
+                Agbor's journey to the US was not an easy one. She faced many challenges along the way, including financial difficulties and cultural barriers. But she refused to give up. She worked hard and graduated with a degree in Business Administration.
+
+                After graduation, Agbor started her career in the corporate world. She quickly realized that there were not many women, especially women of color, in leadership positions. This inspired her to start her own business, a consulting firm that helps women entrepreneurs and small business owners succeed.<br/> <br/>
+
+                Agbor's consulting firm provides a range of services, including business coaching, marketing, and branding. She is passionate about helping women succeed and empowering them to take control of their lives. Her clients rave about her ability to inspire and motivate them to achieve their goals.
+
+                In addition to her consulting work, Agbor is also an advocate for women's rights. She volunteers with several organizations that work to empower women and girls, including Girls Who Code and Women in Technology International. She is committed to creating a world where women have equal opportunities and are treated with respect and dignity.<br/> <br/>
+
+                Agbor's work has not gone unnoticed. She has been featured in several publications, including Forbes and Entrepreneur. She has also been recognized with numerous awards, including the Women in Business Award and the African Women Leadership Award.
+
+                Agbor's story is a testament to the power of perseverance and determination. She is changing the narrative and empowering women in the US. Her work is making a difference in the lives of countless women, and her impact will continue to be felt for years to come.<br/> <br/>
+
+            </p>
+        </div>
+        <div class="right-section">
+
+            
+        </div>
+
+      </div>
+
     </body>
   </html>
